--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="NUnit.ConsoleRunner" version="3.2.1" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.2.1" />
@@ -6,4 +7,5 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.2.1" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.2.1" />
   <package id="NUnit.Runners" version="3.2.1" />
+  <package id="SpecRun.Runner" version="1.5.2" />
 </packages>
